sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:14: error: not found: value plsPetit
    if(plsPetit(k+1,k)){
       ^